--- a/templates/lbforum/forum.html
+++ b/templates/lbforum/forum.html
@@ -12,6 +12,46 @@
 {% endblock %}
 
 {% block content_right_bar %}
+    <div class="box">
+        <div class="cell">
+            <span class="fade">Lecture</span>
+        </div>
+       <div class="inner">
+           <a class="item_node" href=""><span>like</span></a>
+           <a class="item_node" href=""><span>taken</span></a>
+           <a class="item_node" href=""><span>not interested</span></a>
+       </div>
+   </div>
+   <div class="sep20"></div>
+  
+  {% if friends_taken|length >= 1 %}
+              <div class="box">
+                   <div class="cell">
+                        <span class="fade">Friends who have taken</span>
+                     </div>
+                      <div class="inner">
+                           {% for i in friends_taken %}
+                                <a class="item_node" href={% url 'lbforum_profile' i.userid %}><span>{{i.username}}</span></a>
+                             {%endfor%}
+                          </div>
+                       </div>
+                        <div class="sep20"></div>
+                    {% endif %}
+   
+   {% if friends_like|length >= 1 %}
+        <div class="box">
+            <div class="cell">
+                <span class="fade">Friends who liked</span>
+            </div>
+            <div class="inner">
+                {% for i in friends_like %}
+                    <a class="item_node" href={% url 'lbforum_profile' i.userid %}><span>{{i.username}}</span></a>
+                {%endfor%}
+            </div>
+        </div>
+        <div class="sep20"></div>
+   {% endif %}
+
 
   {% if forum.description %}
     <div class="box">
