--- a/templates/lbforum/forum.html
+++ b/templates/lbforum/forum.html
@@ -17,14 +17,13 @@
             <span class="fade">Lecture</span>
         </div>
        <div class="inner">
-            {% block content %}
-            <form action="" method="post">
-                {% csrf_tocken %}
-                <input type="submit" value="like" class="item_node" name="stat">
-                <input type="submit" value="taken" class="item_node" name="stat">
-                <input type="submit" value="not interested" class="item_node" name="stat">
+            <form action= {% url 'lbforum_forum' slug %} method="post">
+                {% csrf_token %}
+                 <input type="hidden"  name="lecture" value={{forum}}>
+                <input type="submit" value="like" class="item_node {% if choose == 1 %}selected{% endif %}" name="stat">
+                <input type="submit" value="taken" class="item_node {% if choose == 2 %}selected{% endif %}" name="stat">
+                <input type="submit" value="not interested" class="item_node {% if choose == 0 %}selected{% endif %}" name="stat">
             </form>
-            {% endblock %}
        </div>
    </div>
    <div class="sep20"></div>
