--- a/templates/lbforum/widgets/categories_and_forums.html
+++ b/templates/lbforum/widgets/categories_and_forums.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class="box" id="forums-box">
   <div class="cell">
-    <span class="fade">{% trans "Forums" %}</span>
+    <span class="fade">{% trans "Lectures" %}</span>
   </div>
   <div class="inner">
     {% for category in categories %}
