--- a/templates/lbforum/forum.html
+++ b/templates/lbforum/forum.html
@@ -60,26 +60,10 @@
   {% if forum.description %}
     <div class="box">
       <div class="cell">
-        <span class="fade">{% trans "Forum Description" %}</span>
+        <span class="fade">{% trans "Lecture Description" %}</span>
       </div>
       <div class="inner">
         {{forum.description|bbcode|safe}}
-      </div>
-    </div>
-    <div class="sep20"></div>
-  {% endif %}
-
-  {% if forum.admins.all.count %}
-    <div class="box">
-      <div class="cell">
-        <span class="fade">{% trans "Forum Admin" %}</span>
-      </div>
-      <div class="inner">
-        {% for o in forum.admins.all %}
-          <a class="item_node" href="{% url 'lbforum_profile' o.pk %}">
-            <span> {{ o.lbforum_profile }} </span>
-          </a>
-        {% endfor %}
       </div>
     </div>
     <div class="sep20"></div>
