--- a/templates/lbforum/profile/user_courses.html
+++ b/templates/lbforum/profile/user_courses.html
@@ -16,28 +16,45 @@
   {% get_pages %}
   <div class="box">
     <div class="cell">
-      <span class="fade">{% blocktrans %}Posts by{% endblocktrans %} {{ view_user.lbforum_profile }}</span>
+      <span class="fade">{% blocktrans %}liked courses : {% endblocktrans %}</span>
     </div>
-    {% for post in posts %}
-      <div class="cell reply">
+    {% for course in like_classes %}
+      <div class="cell course">
         <table width="100%" cellspacing="0" cellpadding="0" border="0">
           <tbody>
             <tr>
               <td width="auto" valign="top">
 
                 <strong>
-                  <a href="{{ post.get_absolute_url }}">{{ post.subject }}</a>
+                  <a href="{{ course.get_absolute_url }}">{{ course.name }}</a>
                 </strong>
-                <div class="sep5"></div>
-                <div class="content reply_content">
-                  {{ post.message|bbcode }}
-                </div>
               </td>
             </tr>
           </tbody>
         </table>
-      </div>
+      </div>  
     {% endfor %}
+
+    <div class="cell">
+      <span class="fade">{% blocktrans %}taken courses : {% endblocktrans %}</span>
+    </div>
+    {% for course in like_classes %}
+    <div class="cell course">
+      <table width="100%" cellspacing="0" cellpadding="0" border="0">
+        <tbody>
+          <tr>
+            <td width="auto" valign="top">
+
+              <strong>
+                <a href="{{ course.get_absolute_url }}">{{ course.name }}</a>
+              </strong>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>  
+  {% endfor %}
+
     <div class="inner">
       {% show_pages %}
     </div>
