--- a/templates/lbforum/profile/user_courses.html
+++ b/templates/lbforum/profile/user_courses.html
@@ -16,17 +16,21 @@
   {% get_pages %}
   <div class="box">
     <div class="cell">
-      <span class="fade">{% blocktrans %}liked courses : {% endblocktrans %}</span>
+      <span class="fade" style="color:grey">{% blocktrans %}liked courses : {% endblocktrans %}</span>
     </div>
     {% for course in like_classes %}
       <div class="cell course">
         <table width="100%" cellspacing="0" cellpadding="0" border="0">
-          <tbody>
+          <tbody >
             <tr>
-              <td width="auto" valign="top">
-
+              {% if course.1 %}
+            <td width="auto" valign="top" style="background-color:yellow">
+              {% else %}
+              <td width="auto" valign="top" >
+              {% endif %}
+                
                 <strong>
-                  <a href="{{ course.get_absolute_url }}">{{ course.name }}</a>
+                  <a href="{{ course.get_absolute_url }}">{{ course.0.name }}</a>
                 </strong>
               </td>
             </tr>
@@ -36,17 +40,20 @@
     {% endfor %}
 
     <div class="cell">
-      <span class="fade">{% blocktrans %}taken courses : {% endblocktrans %}</span>
+      <span class="fade" style="color:grey">{% blocktrans %}taken courses : {% endblocktrans %}</span>
     </div>
-    {% for course in like_classes %}
+    {% for course in taken_classes %}
     <div class="cell course">
       <table width="100%" cellspacing="0" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td width="auto" valign="top">
-
+            {% if course.1 %}
+            <td width="auto" valign="top" style="background-color:yellow">
+            {% else %}
+            <td width="auto" valign="top" >
+            {% endif %}
               <strong>
-                <a href="{{ course.get_absolute_url }}">{{ course.name }}</a>
+                <a href="{{ course.get_absolute_url }}">{{ course.0.name }}</a>
               </strong>
             </td>
           </tr>
