--- a/static/lbforum/styles/v2ex/default.css
+++ b/static/lbforum/styles/v2ex/default.css
@@ -8,7 +8,41 @@
 	
 	The best way to wipe IE6 from this planet is to forget it all since the beginning of your every new project.
 */
-
+.rate {
+    float: left;
+        height: 40px;
+            padding: 0 10px;
+            }
+            .rate:not(:checked) > input {
+                position:absolute;
+                    top:-9999px;
+                    }
+                    .rate:not(:checked) > label {
+                        float:right;
+                            width:1em;
+                                overflow:hidden;
+                                    white-space:nowrap;
+                                        cursor:pointer;
+                                            font-size:20px;
+                                                color:#ccc;
+                                                }
+                                                .rate:not(:checked) > label:before {
+                                                    content: '★ ';
+                                                    }
+                                                    .rate > input:checked ~ label {
+                                                        color: #ffc700;    
+                                                        }
+                                                        .rate:not(:checked) > label:hover,
+                                                        .rate:not(:checked) > label:hover ~ label {
+                                                            color: #deb217;  
+                                                            }
+                                                            .rate > input:checked + label:hover,
+                                                            .rate > input:checked + label:hover ~ label,
+                                                            .rate > input:checked ~ label:hover,
+                                                            .rate > input:checked ~ label:hover ~ label,
+                                                            .rate > label:hover ~ input:checked ~ label {
+                                                                color: #c59b08;
+                                                                }
 html {
 }
 
