--- a/templates/lbforum/profile/inc_base_profile.html
+++ b/templates/lbforum/profile/inc_base_profile.html
@@ -51,7 +51,7 @@
     <a class = "item_node" href = "{% url 'lbforum_user_posts' user_id=view_user.pk %}">   
       <span>add friend </span>
     </a>
-    <a class = "item_node" href = "{% url 'lbforum_user_posts' user_id=view_user.pk %}">   
+    <a class = "item_node" href = "{% url 'new_chat' user_id=view_user.pk %}">
       <span>chat </span>
     </a>
   </div>
