--- a/templates/lbforum/forum.html
+++ b/templates/lbforum/forum.html
@@ -116,27 +116,32 @@
             </span>
             <div class="sep10"></div>
             <div class="sep10"></div>
-             <div align="left">
-             <form action = "rating">
-             {% csrf_token %}
-              <div class="rate">
-              <input type="hidden" name="slug" value= {{slug}} />
-              <input type="radio" id="star5" name="rate" value="5" />
-              <label for="star5" title="text">5 stars</label>
-              <input type="radio" id="star4" name="rate" value="4" />
-              <label for="star4" title="text">4 stars</label>
-              <input type="radio" id="star3" name="rate" value="3" />
-              <label for="star3" title="text">3 stars</label>
-              <input type="radio" id="star2" name="rate" value="2" />
-              <label for="star2" title="text">2 stars</label>
-              <input type="radio" id="star1" name="rate" value="1" />
-              <label for="star1" title="text">1 star</label>
-              </div>
+
+                <div class = "snow">
+                    {{avg_rating}}
+                </div>
+              <div align="left">
+              <form action = {% url 'rating' %} method = "post">
+                {% csrf_token %}
+                <div class="rate">
+                  <input type="hidden" name="slug" value= {{slug}} >
+                  <input type="radio" id="star5" name="rate" value=5 >
+                  <label for="star5" title="text">5 stars</label>
+                  <input type="radio" id="star4" name="rate" value=4 >
+                  <label for="star4" title="text">4 stars</label>
+                  <input type="radio" id="star3" name="rate" value=3 >
+                  <label for="star3" title="text">3 stars</label>
+                  <input type="radio" id="star2" name="rate" value=2 >
+                  <label for="star2" title="text">2 stars</label>
+                  <input type="radio" id="star1" name="rate" value=1 >
+                  <label for="star1" title="text">1 star</label>
+                </div>
+                <div>
+                  <input type="submit" value = "submit" class="normal button" width="50">
+                </div>
               </form>
             </div>
             <br>
-            <br>
-            <div class="sep20"></div>
             <div class="sep20"></div>
             <div align="left">
               <a href="{% url 'lbforum_new_topic' forum_id=forum.pk %}" class="super normal button">{% trans "Post new topic" %}</a>
