--- a/templates/lbforum/chat.html
+++ b/templates/lbforum/chat.html
@@ -74,7 +74,7 @@
   {% if  topic|topic_can_post:user %}
     <div class="sep20"></div>
     <div class="box" id="quick-reply-box">
-      <form action="{% url 'chat_new_replay' topic_id=topic.pk %}" accept-charset="utf-8" method="post" class="frm-form">
+      <form action="{% url 'new_chat2' topic_id=topic.pk %}" accept-charset="utf-8" method="post" class="frm-form">
         <div class="cell"><div class="fr fade"><a class="dark" href="#Top">Top&uarr;</a></div>
           <span class="fade">
             {% trans "Quick reply to this topic" %}
