--- a/templates/lbforum/index.html
+++ b/templates/lbforum/index.html
@@ -11,7 +11,7 @@
   <div class="sep20"></div>
   {% lbf_status %}
   <div class="sep20"></div>
-  <div class="box" id="friend-links-box">
+  <!--<div class="box" id="friend-links-box">
     <div class="cell">
       <span class="fade">
         {% trans "Friend Links" %}
@@ -20,7 +20,7 @@
     <div class="inner">
       {% include 'lbforum/plugins/inc_friend_links.html' %}
     </div>
-  </div>
+  </div> -->
 {% endblock %}
 
 {% block content_content %}
