--- a/static/lbforum/styles/v2ex/default.css
+++ b/static/lbforum/styles/v2ex/default.css
@@ -162,17 +162,25 @@ a.dark:hover {
 	text-decoration: none;
 }
 
+.image_name {
+	text-align: middle;
+	display: block;
+	text-align: center;
+	font-size: 15px;
+    margin: 5px;
+}
+
 /* IDs */
 
 #Top {
-	height: 40px;
+	height: 80px;
 	background-color: #222;
 	background-image: url("bg_top.png"); 
 }
 
 #TopMain {
 	width: 960px;
-	height: 40px;
+	height: 80px;
 	text-align: center;
 	margin: 0px auto 0px auto;
 	background-color: #070c45;
@@ -191,7 +199,7 @@ a.dark:hover {
 #Search {
 	margin: 0px 200px 0px 120px;
 	text-align: left;
-	padding: 7px 0px 0px 0px;
+	padding: 25px 0px 0px 0px;
 }
 
 #Navigation {
@@ -212,7 +220,8 @@ a.dark:hover {
 #Navigation ul li {
 	list-style: none;
 	float: left;
-	margin-left: 10px;
+	margin-top: 15px;
+	margin-right: 20px;
 }
 
 #Navigation ul li a {
@@ -220,9 +229,9 @@ a.dark:hover {
 }
 
 #Wrapper {
-	background-color: #fff;
-	background-image: url("bohemian.jpg"); 
-	/*background-image: linear-gradient( 135deg, #ABDCFFAA 10%, #0380fdaa 100%);*/
+	/*background-color: #fff;
+	background-image: url("bohemian.jpg");  */
+	background-image: linear-gradient( 135deg, #ABDCFFAA 10%, #0380fdaa 100%);
 }
 
 #Main {
@@ -442,7 +451,7 @@ td.avatar_mini {
 	font-size: 13px;
 	line-height: 13px;
 	padding: 4px 10px 4px 10px;
-	margin: 3px;
+	margin: 8px 4px 8px 4px;
 	background-color: #f5f5f5;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -1063,9 +1072,9 @@ a.fade:hover {
 #TopMain #title {
     display: block;
     float: left;
-    margin-top: 8px;
+    margin-top: 25px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 #TopMain #title a, #TopMain #title a:link, #TopMain #title a:visited {
     color: #FFFFFF;
