--- a/static/lbforum/styles/v2ex/default.css
+++ b/static/lbforum/styles/v2ex/default.css
@@ -174,8 +174,7 @@ a.dark:hover {
 
 #Top {
 	height: 80px;
-	background-color: #222;
-	background-image: url("bg_top.png"); 
+	background-color: #6ed4c0;
 }
 
 #TopMain {
@@ -183,7 +182,7 @@ a.dark:hover {
 	height: 80px;
 	text-align: center;
 	margin: 0px auto 0px auto;
-	background-color: #070c45;
+	background-color: #6ed4c0;
 }
 
 #Logo {
@@ -231,7 +230,7 @@ a.dark:hover {
 #Wrapper {
 	/*background-color: #fff;
 	background-image: url("bohemian.jpg");  */
-	background-image: linear-gradient( 135deg, #ABDCFFAA 10%, #0380fdaa 100%);
+	background-image: linear-gradient( 135deg, #c4e7ff 10%, #5cadfe 100%);
 }
 
 #Main {
@@ -490,11 +489,12 @@ td.avatar_mini {
 	-moz-border-radius: 0px 3px 3px 0px;
 }
 
-.super.button { background-image: url("bg_blended.png"); padding: 4px 15px 4px 15px; border: 1px solid rgba(0,0,0,.25); border-bottom-color: rgba(0,0,0,.35); -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-size: 12px; line-height: 12px; outline: none; }
+.super.button { 
+    background-color: #b1c2bd; padding: 4px 15px 4px 15px; border: 1px solid rgba(0,0,0,.25); border-bottom-color: rgba(0,0,0,.35); -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-size: 12px; line-height: 12px; outline: none; color:#ffffff}
 
-.normal.button { background-color: #f5f5f5; color: #333; text-shadow: 0px 1px 1px #fff; text-decoration: none; font-weight: bold; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.3); }
-.normal.button:hover { background-color: #fff; color: #333; text-shadow: 0px 1px 1px #fff; text-decoration: none; text-decoration: none; font-weight: bold; cursor: pointer; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.2); }
-.normal.button:active { background-color: #e2e2e2; color: #333; text-shadow: 0px 1px 1px #fff; text-decoration: none; text-decoration: none; font-weight: bold; cursor: pointer; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.2); }
+.normal.button { background-color: #b1c2bd; color: #fff; text-shadow: 0px 1px 1px #fff; text-decoration: none; font-weight: bold; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.3); }
+.normal.button:hover { background-color: #fff; color: #fff; text-shadow: 0px 1px 1px #fff; text-decoration: none; text-decoration: none; font-weight: bold; cursor: pointer; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.2); }
+.normal.button:active { background-color: #e2e2e2; color: #fff; text-shadow: 0px 1px 1px #fff; text-decoration: none; text-decoration: none; font-weight: bold; cursor: pointer; -moz-box-shadow: 0px 1px 2px rgba(66, 66, 77, 0.2); }
 
 .special.button { background-color: #ffcc00; color: #532b17; text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6); text-decoration: none; font-weight: 600; -moz-box-shadow: 0px 1px 2px rgba(233, 175, 0, 0.6); border: 1px solid rgba(200, 150, 0, 0.8); }
 .special.button:hover { background-color: #ffdf00; color: #402112; text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.7); text-decoration: none; text-decoration: none; font-weight: 600; cursor: pointer; -moz-box-shadow: 0px 1px 2px rgba(233, 175, 0, 0.5); border: 1px solid rgba(200, 150, 0, 1); }
