--- a/templates/lbforum/inc_header.html
+++ b/templates/lbforum/inc_header.html
@@ -19,7 +19,8 @@
     <div id="Search">
       <form action="{% url 'lbforum_recent' %}">
         <input type="text" class="search" maxlength="40" name="q" value="" id="q">
-        <input type="submit" class="super normal button" value="{% trans "Search" %}" style="-moz-border-radius: 0px 5px 5px 0px; border: none;">
+        <button type="submit" class="super normal search button" value="{% trans "Search" %}" style="-moz-border-radius: 0px 5px 5px 0px; border: none;">Search</button>
+
       </form>
     </div>
   </div>
