--- a/templates/lbforum/post.html
+++ b/templates/lbforum/post.html
@@ -84,6 +84,10 @@
 
         <ul id="uploaded_files">
         </ul>
+        {% for i in tags %}
+          <input type="radio" name="tag" value={{i}} required/>
+          <label>{{i}}</label>
+        {% endfor %}
         <div class="sep10"></div>
         <input type="submit" class="super normal button" value="{% trans "Submit" %}" name="submit"/>
         <input type="submit" class="super normal button" value="{% trans "Preview" %}" name="preview"/>
