--- a/static/lbforum/styles/v2ex/default.css
+++ b/static/lbforum/styles/v2ex/default.css
@@ -908,7 +908,7 @@ a.node:hover {
 }
 
 a.node2:link, a.node2:visited, a.node2:active {
-	background-color: #08ab04;
+	background-color: rgb(8,171,4);
 	font-size: 11px;
 	line-height: 10px;
 	display: inline-block;
