--- a/templates/lbforum/index.html
+++ b/templates/lbforum/index.html
@@ -11,6 +11,11 @@
   <div class="sep20"></div>
   {% lbf_status %}
   <div class="sep20"></div>
+  <div class="box">
+    <div class="cell">
+      <span style="font-size: 18px">Chat</span>
+    </div>
+  </div>
   {% for chat in chatlist %}
   <div class="box">
     <div class="cell">
