--- a/static/lbforum/styles/v2ex/default.css
+++ b/static/lbforum/styles/v2ex/default.css
@@ -52,6 +52,7 @@ label.taginput{
 }
 
 html {
+	height : 100%;
 }
 
 small {
@@ -62,6 +63,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
+	height: 100%;
 	/*background-image: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);	*/
 	-webkit-text-size-adjust: none;
 }
@@ -242,7 +244,7 @@ a.dark:hover {
 	/*background-color: #fff;
 	background-image: url("bohemian.jpg");  */
 	background-image: linear-gradient( 135deg, #c4e7ff 10%, #5cadfe 100%);
-	min-height: 835px;
+	height: 100%;
 }
 
 #Main {
